added role in jwt