@@ -6,6 +6,7 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -13,6 +14,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -27,9 +29,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String authHeader = request.getHeader("Authorization");
         if(authHeader!=null && authHeader.startsWith("Bearer ")){
             String token = authHeader.substring(7);
-            var sub = jwtService.validateToken(token).orElse(null);
-            if(sub!=null && SecurityContextHolder.getContext().getAuthentication() == null){
-                var auth = new UsernamePasswordAuthenticationToken(sub,null, Collections.emptyList());
+            var data = jwtService.validateToken(token).orElse(null);
+            if(data!=null && SecurityContextHolder.getContext().getAuthentication() == null){
+                var auth = new UsernamePasswordAuthenticationToken(data.get("username"),null, List.of(new SimpleGrantedAuthority(data.get("role"))));
                 auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
