@@ -1,6 +1,7 @@
 package com.raquib.cartapi.services;
 
 import com.raquib.cartapi.repositories.UserRepository;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -8,6 +9,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -19,7 +21,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
     public UserDetails loadUserByUsername(String username){
         var user = userRepository.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("user not found"));
-        return new User(user.getUsername(),user.getPassword(), Collections.emptyList());
+        return new User(user.getUsername(),user.getPassword(), List.of(new SimpleGrantedAuthority(user.getRole())));
     }
 
 }
